--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "your-project-name-here-server",
+  "name": "flomics-app-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
